tests/src/frontend/typechecking/invalid/from_invalid_2.sk
base class Foo
class MyFoo() {
  fun foo from Foo;
}
